force-app/main/default/objects/Course_Offering_Pricing__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Course_Code__c</fullName>
        <formula>Course_Offering__r.Course__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Course Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_Offering__c</fullName>
        <label>Course Offering</label>
        <referenceTo>Course_Offering__c</referenceTo>
        <relationshipLabel>Course Offering Pricings</relationshipLabel>
        <relationshipName>Course_Offering_Pricings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DiscountEvidenceType__c</fullName>
        <label>Discount Evidence Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NotRequired</fullName>
                    <default>true</default>
                    <label>Not Required</label>
                </value>
                <value>
                    <fullName>Text</fullName>
                </value>
                <value>
                    <fullName>Attachment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EndDate__c</fullName>
        <label>Pricing End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fee__c</fullName>
        <label>Fee</label>
        <precision>8</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pricing_Name__c</fullName>
        <description>Pricing Name for COP</description>
        <label>Pricing Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pricing_Type__c</fullName>
        <label>Pricing Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Normal Rate</fullName>
                    <default>true</default>
                    <label>Normal Rate</label>
                </value>
                <value>
                    <fullName>Early Bird</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <label>Pricing Start Date</label>
        <type>Date</type>
    </fields>
    <label>Course Offering Pricing</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Course_Offering__c</columns>
        <columns>Course_Code__c</columns>
        <columns>Pricing_Name__c</columns>
        <columns>Pricing_Type__c</columns>
        <columns>StartDate__c</columns>
        <columns>EndDate__c</columns>
        <columns>Fee__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>COP-{000}</displayFormat>
        <label>COPID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Course Offering Pricings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>EarlyBirdDatesValidation</fullName>
        <active>true</active>
        <description>To check that the Pricing Start Date &amp; Pricing End Date are defined.</description>
        <errorConditionFormula>AND(ISPICKVAL(Pricing_Type__c , &apos;Early Bird&apos;), OR(ISBLANK( StartDate__c ),ISBLANK(  EndDate__c ) ) )</errorConditionFormula>
        <errorMessage>Please define Pricing Start and Pricing End dates for Early Bird pricing.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>NormalRatesDatesValidation</fullName>
        <active>true</active>
        <description>To check that the Pricing Start Date &amp; Pricing End Date are blank.</description>
        <errorConditionFormula>AND(NOT(ISPICKVAL(Pricing_Type__c , &quot;Early Bird&quot;)), 
  OR(NOT(ISBLANK(StartDate__c)),NOT(ISBLANK(EndDate__c)) )
   )</errorConditionFormula>
        <errorMessage>Please leave Pricing Start and Pricing End dates blank for Normal pricing.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>StartDtEarlierthanEndDT</fullName>
        <active>true</active>
        <errorConditionFormula>StartDate__c&gt;EndDate__c</errorConditionFormula>
        <errorMessage>Pricing Start Date must be earlier than the Pricing End Date.</errorMessage>
    </validationRules>
</CustomObject>